# superficial_beliefs

./: .gitignore  BUG_ANALYSIS.md  CHOICE_CONSISTENCY_ANALYSIS.md  CONTINUATION_MODE.md  CORRECTED_RESULTS.md  COUNTERBALANCING.md  DATASET_CLEANING_IDENTICAL_PROFILES.md  DEBUG_SCRIPT_USAGE.md  FIXES_COMPLETED.md  INCREMENTAL_EXECUTION.md  QUICK_ECRB_TEST.md  QUICK_REFERENCE.md  README.md  REASONING_EFFORT_ANALYSIS.md  REASONING_EFFORT_COMPARISON_GUIDE.md  REASONING_EFFORT_EXECUTIVE_SUMMARY.md  REASONING_EFFORT_NAMING.md  SENTENCE_ATTRIBUTE_VALIDATION.md  THEME_SYSTEM.md  TRAIN_TEST_SPLIT.md  agent.md  pyproject.toml  reorganize_results.py  test_gpt5_responses_api.py  test_single_trial.py
configs/: default.yml  models.yml  models_gpt5mini_low.yml  models_gpt5mini_minimal.yml  models_gpt5nano_low.yml  models_gpt5nano_minimal.yml  occlusion.yml
data/: MANIFEST.json  README.md
scripts/: analyze_attribute_level_results.py  analyze_choice_consistency.py  analyze_final_benchmark.py  analyze_judge_baselines.py  analyze_methodc_current_run.py  apply_theme.py  bootstrap_final_results.py  build_final_base_dataset.py  build_final_results_tables.py  build_final_themed_datasets.py  build_occlusion_suite_dataset.py  check_final_benchmark_complete.py  compare_reasoning_efforts.py  create_holdout_split.py  debug_all_variations.py  dedupe_run_outputs.py  filter_run_to_dataset.py  fit_stageA.py  fix_premise_parsing.py  generate_final_benchmark_bundle.py  generate_occlusion_suite_bundle.py  inspect_alignment_samples.py  inspect_b1_failures.py  launch_final_benchmark_concurrent.sh  (+26 more)
(+485 files in other folders)
