[project]
name = "superficial-beliefs"
version = "0.1.0"
description = "Implicit Superficial Beliefs and Enthymeme Use in LLMs"
authors = [{name = "Research Team", email = "research@example.com"}]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "statsmodels",
  "pyarrow",
  "pydantic>=2",
  "joblib",
  "tqdm",
  "matplotlib",
  "pyyaml",
  "tenacity",
  "jinja2",
  "plotly",
  "scikit-learn"
]

[project.optional-dependencies]
llm = [
  "openai>=1.0",
  "anthropic>=0.10",
  "httpx"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
